/* No comment provided by engineer. */
"A message with the same name already exists, try again." = "A message with the same name already exists, try again.";

/* No comment provided by engineer. */
"A program with the same name already exists, try again." = "A program with the same name already exists, try again.";

/* No comment provided by engineer. */
"About Catrobat" = "About Catrobat";

/* No comment provided by engineer. */
"About Pocket Code" = "About Pocket Code";
...
"Camera Roll" = "Camera Roll";

/* No comment provided by engineer. */
"Can't restart program!" = "Can't restart program!";

/* No comment provided by engineer. */
"Cancel" = "Cancel";

/* bluetooth */
"Cannot connect to device, please try resetting the device and try again." = "Cannot connect to device, please try resetting the device and try again.";

/* bluetooth */
"Cannot connect to device. The device is not responding." = "Cannot connect to device. The device is not responding.";
...
"Connection Lost" = "Connection Lost";

/* bluetooth */
"Connection not possible" = "Connection not possible";

/* No comment provided by engineer. */
"Continue" = "Continue";

/* No comment provided by engineer. */
"Control" = "Control";

/* No comment provided by engineer. */
"Copy" = "Copy";
...
"Do you really want to delete the current drawing?" = "Do you really want to delete the current drawing?";

/* paint */
"Do you want to save the changes" = "Do you want to save the changes";

/* No comment provided by engineer. */
"Done" = "Done";

/* No comment provided by engineer. */
"Download" = "Download";

/* No comment provided by engineer. */
"Download sucessful" = "Download sucessful";
...
"Enter your object name here..." = "Enter your object name here...";

/* Placeholder for program-description input field */
"Enter your program description here..." = "Enter your program description here...";

/* Placeholder for program-name input field */
"Enter your program name here..." = "Enter your program name here...";

/* Placeholder for add sound-name input field */
"Enter your sound name here..." = "Enter your sound name here...";

/* Placeholder for variable input field */
"Enter your variable name here..." = "Enter your variable name here...";
...
"eraser" = "eraser";

/* No comment provided by engineer. */
"Error" = "Error";

/* No comment provided by engineer. */
"Explore" = "Explore";

/* No comment provided by engineer. */
"Explore apps" = "Explore apps";

/* No comment provided by engineer. */
"FA" = "FA";
...
"gyro-sensor" = "gyro-sensor";

/* No comment provided by engineer. */
"Hello !" = "Hello !";

/* No comment provided by engineer. */
"Help" = "Help";

/* No comment provided by engineer. */
"Hide" = "Hide";

/* No comment provided by engineer. */
"Hide Details" = "Hide Details";
...
"Loading" = "Loading";

/* No comment provided by engineer. */
"Logic" = "Logic";

/* No comment provided by engineer. */
"Login" = "Login";

/* No comment provided by engineer. */
"Login successful" = "Login successful";

/* No comment provided by engineer. */
"Login/Register" = "Login/Register";
...
"Move Phiro Motor forward\n%@\n Speed %@\%" = "Move Phiro Motor forward\n%@\n Speed %@\%";

/* No comment provided by engineer. */
"Move Sounds" = "Move Sounds";

/* Name of the default catrobat program (used as filename!!) */
"My first program" = "My first program";

/* Default title of imported photo from camera (taken by camera) */
"My Image" = "My Image";

/* Title for first (default) object */
"My Object" = "My Object";
...
"Name" = "Name";

/* No comment provided by engineer. */
"Name already exists. Please choose another" = "Name already exists. Please choose another";

/* No comment provided by engineer. */
"New" = "New";

/* paint */
"New Canvas" = "New Canvas";

/* No comment provided by engineer. */
"New Message" = "New Message";

/* No comment provided by engineer. */
"New Program" = "New Program";

/* No comment provided by engineer. */
"New Text" = "New Text";

/* No comment provided by engineer. */
"New Variable" = "New Variable";
...
"Oct" = "Oct";

/* No comment provided by engineer. */
"October" = "October";

/* No comment provided by engineer. */
"OK" = "OK";

/* No comment provided by engineer. */
"only 15 characters allowed" = "only 15 characters allowed";

/* No comment provided by engineer. */
"Only space is not allowed. Please enter at least %lu other character(s)." = "Only space is not allowed. Please enter at least %lu other character(s).";
...
"Please select a program to upload" = "Please select a program to upload";

/* bluetooth */
"Please try resetting the device and try again." = "Please try resetting the device and try again.";

/* No comment provided by engineer. */
"Pocket Code" = "Pocket Code";

/* No comment provided by engineer. */
"Pocket Code for iOS" = "Pocket Code for iOS";

/* No comment provided by engineer. */
"Pocket Code has been started in debug mode." = "Pocket Code has been started in debug mode.";
...
"Program Name is necessary!" = "Program Name is necessary!";

/* No comment provided by engineer. */
"Program variables:" = "Program variables:";

/* No comment provided by engineer. */
"Programs" = "Programs";

/* No comment provided by engineer. */
"Project" = "Project";

/* Title of the QR Code reader used to download Scratch converted Catrobat programs from the Internet */
"QR Code Reader" = "QR Code Reader";
...
"Screenshot saved to project" = "Screenshot saved to project";

/* No comment provided by engineer. */
"Script" = "Script";

/* No comment provided by engineer. */
"Scripts" = "Scripts";

/* bluetooth */
"Search" = "Search";

/* No comment provided by engineer. */
"Select All" = "Select All";
...
"Undo Typing?" = "Undo Typing?";

/* No comment provided by engineer. */
"Unselect All" = "Unselect All";

/* No comment provided by engineer. */
"Upload" = "Upload";

/* No comment provided by engineer. */
"Upload Program" = "Upload Program";

/* No comment provided by engineer. */
"Upload Selected Program" = "Upload Selected Program";
...
