...

    func getAnalogPin(analogPinNumber:Int) -> Double {
        let pin: UInt8 = UInt8(checkValue(analogPinNumber))
        switch (pin) {
        case 0:
            return Double(getAnalogPin0())
        case 1:
            return Double(getAnalogPin1())
        case 2:
            return Double(getAnalogPin2())
        case 3:
            return Double(getAnalogPin3())
        case 4:
...
